--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,111 @@
 @import 'colors';
+@import 'fonts';
+@import 'hamburgers';
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.logo {
+  font-family: $shadows;
+  text-transform: uppercase;
+  letter-spacing: 1.5vw;
+  font-size: 5vw;
+  letter-spacing: 0.5vw;
+  color: $gold;
+  position: absolute;
+  top: 2vw;
+  left: 6vw;
+  text-shadow: 0.2vw 0.2vw grey;
+}
+
+.hamburger {
+  color: white;
+  position: absolute;
+  top: 4vw;
+  right: 0vw;
+  opacity: 0.9;
+}
+
+ul {
+  text-align: right;
+  position: absolute;
+  top: 5vw;
+  right: 6vw;
+  line-height: 1.1;
+}
+
+li {
+  list-style-type: none;
+  font-family: $titillium;
+  color: white;
+  font-size: 2vw;
+  letter-spacing: 0.8vw;
+}
+
+img {
+  height: 50vw;
+  width: 100%;
+}
+
+.intro {
+  position: absolute;
+  top: 15vw;
+  left: 20vw;
+  font-family: $titillium;
+  text-transform: uppercase;
+  line-height: 1.2;
+  color: white;
+  // text-align: left;
+  height: 40vw;
+  padding-right: 2vw;
+  padding-top: 2vw;
+  letter-spacing: 0.8vw;
+}
+
+p:nth-of-type(2) {
+  letter-spacing: 2vw;
+  // font-weight: bold;
+  font-size: 4vw;
+}
+
+p:nth-of-type(3) {
+  font-size: 2vw;
+  text-transform: lowercase;
+}
+
+.white1,
+.white2 {
+  background-color: white;
+  position: absolute;
+  z-index: 99;
+}
+
+.white1 {
+  height: 13vw;
+  width: 50vw;
+  transform: rotate(18deg);
+  top: 42vw;
+  left: -10vw;
+}
+
+.white2 {
+  height: 43vw;
+  width: 70vw;
+  transform: rotate(-14deg);
+  top: 40vw;
+  left: 42vw;
+}
+
+.border1 {
+  position: absolute;
+  top: 18vw;
+  left: 45vw;
+  z-index: 99;
+  border-left: 1.3px solid grey;
+  transform: rotate(-22deg);
+  height: 40vw;
+  width: 40vw;
 }
