--- a/styles.scss
+++ b/styles.scss
@@ -25,24 +25,24 @@
   color: white;
   position: absolute;
   top: 4vw;
-  right: 0vw;
+  right: 0.5vw;
   opacity: 0.9;
 }
 
 ul {
   text-align: right;
   position: absolute;
-  top: 5vw;
-  right: 6vw;
-  line-height: 1.1;
+  top: 4.5vw;
+  right: 4.5vw;
+  line-height: 1.3;
 }
 
 li {
   list-style-type: none;
   font-family: $titillium;
   color: white;
-  font-size: 2vw;
-  letter-spacing: 0.8vw;
+  font-size: 1.5vw;
+  letter-spacing: 0.9vw;
 }
 
 img {
@@ -51,6 +51,7 @@ img {
 }
 
 .intro {
+  font-size: 2vw;
   position: absolute;
   top: 15vw;
   left: 20vw;
@@ -63,17 +64,31 @@ img {
   padding-right: 2vw;
   padding-top: 2vw;
   letter-spacing: 0.8vw;
-}
 
-p:nth-of-type(2) {
-  letter-spacing: 2vw;
-  // font-weight: bold;
-  font-size: 4vw;
-}
+  p:nth-of-type(2) {
+    letter-spacing: 2vw;
+    font-size: 4vw;
+  }
 
-p:nth-of-type(3) {
-  font-size: 2vw;
-  text-transform: lowercase;
+  .sub {
+    position: absolute;
+    top: 23w;
+    right: -20vw;
+    transform: rotate(-15deg);
+    color: $Teal;
+    text-transform: lowercase;
+    font-size: 3vw;
+    letter-spacing: 0.1vw;
+  }
+
+  // .border-section {
+  //   height: 1vw;
+  //   width: 4vw;
+  //   border-top: 1px solid white;
+  //   margin-top: 2vw;
+  //   text-align: center;
+  //   transform: translate(5vw 5vw);
+  // }
 }
 
 .white1,
@@ -104,7 +119,8 @@ p:nth-of-type(3) {
   top: 18vw;
   left: 45vw;
   z-index: 99;
-  border-left: 1.3px solid grey;
+  border-left: 2px solid $gold;
+  // box-shadow: 1px grey;
   transform: rotate(-22deg);
   height: 40vw;
   width: 40vw;
