--- a/styles.scss
+++ b/styles.scss
@@ -12,48 +12,52 @@
   font-family: $shadows;
   text-transform: uppercase;
   letter-spacing: 1.5vw;
-  font-size: 5vw;
+  font-size: 4vw;
   letter-spacing: 0.5vw;
   color: $gold;
   position: absolute;
   top: 2vw;
-  left: 6vw;
+  left: 4vw;
   text-shadow: 0.2vw 0.2vw grey;
 }
 
 .hamburger {
   color: white;
   position: absolute;
-  top: 4vw;
-  right: 0.5vw;
+  top: 2vw;
+  right: 4vw;
   opacity: 0.9;
 }
 
 ul {
   text-align: right;
   position: absolute;
-  top: 4.5vw;
-  right: 4.5vw;
+  top: 1.3vw;
+  right: 8vw;
   line-height: 1.3;
+  background-color: white;
+  padding: 1vw 2vw;
+  transform: rotate(-10deg);
 }
 
 li {
   list-style-type: none;
   font-family: $titillium;
-  color: white;
+  color: $Teal;
   font-size: 1.5vw;
-  letter-spacing: 0.9vw;
+  letter-spacing: 0.2vw;
 }
 
-img {
+.bg {
   height: 50vw;
   width: 100%;
+  z-index: -99;
 }
 
 .intro {
   font-size: 2vw;
   position: absolute;
-  top: 15vw;
+  top: 25vw;
   left: 20vw;
   font-family: $titillium;
   text-transform: uppercase;
@@ -69,37 +73,31 @@ img {
     letter-spacing: 2vw;
     font-size: 4vw;
   }
+}
 
-  .sub {
-    position: absolute;
-    top: 23w;
-    right: -20vw;
-    transform: rotate(-15deg);
-    color: $Teal;
-    text-transform: lowercase;
-    font-size: 3vw;
-    letter-spacing: 0.1vw;
-  }
-
-  // .border-section {
-  //   height: 1vw;
-  //   width: 4vw;
-  //   border-top: 1px solid white;
-  //   margin-top: 2vw;
-  //   text-align: center;
-  //   transform: translate(5vw 5vw);
-  // }
+.sub {
+  position: absolute;
+  top: 47vw;
+  right: 30vw;
+  font-family: $shadows;
+  transform: rotate(-25deg);
+  color: $Teal;
+  text-transform: lowercase;
+  font-size: 4vw;
+  letter-spacing: 0.1vw;
+  z-index: 3;
+  text-shadow: 0.1vw 0.1vw grey;
 }
 
 .white1,
 .white2 {
   background-color: white;
   position: absolute;
-  z-index: 99;
+  overflow-x:hidden;
 }
 
 .white1 {
-  height: 13vw;
+  height: 43vw;
   width: 50vw;
   transform: rotate(18deg);
   top: 42vw;
@@ -107,21 +105,114 @@ img {
 }
 
 .white2 {
-  height: 43vw;
-  width: 70vw;
+  height: 42vw;
+  width: 85vw;
   transform: rotate(-14deg);
   top: 40vw;
-  left: 42vw;
+  left: 33vw;
+  overflow-x: hidden;
 }
 
 .border1 {
   position: absolute;
   top: 18vw;
   left: 45vw;
-  z-index: 99;
   border-left: 2px solid $gold;
+  border-bottom: 2px solid $gold;
   // box-shadow: 1px grey;
-  transform: rotate(-22deg);
-  height: 40vw;
-  width: 40vw;
+  transform: rotate(-30deg);
+  height: 27vw;
+  width: 60vw;
+  z-index: 99;
+}
+
+.aboutMe {
+  position: absolute;
+  width: 63vw;
+  display: flex;
+}
+
+.strip {
+  width: 15vw;
+  position: relative;
+  top: 24vw;
+  left: 81vw;
+  transform: rotate(10deg);
+  z-index: 2;
+  box-shadow: 2px 2px 0.4 grey;
+}
+
+.strip2 {
+  left: 52vw;
+  top: 26vw;
+  transform: rotate(-10deg);
+}
+
+article {
+  // background-image: url(../img/background-1921589_1920.jpg);
+  background: $Teal;
+  color: white;
+  font-family: $titillium;
+  position: relative;
+  top: 2vw;
+  right: -27vw;
+  z-index: 1;
+  width: 38vw;
+  padding: 4vw 2vw;
+  text-align: right;
+  align-self: flex-end;
+}
+
+.text {
+  text-align: left;
+}
+
+.headline {
+  position: relative;
+  font-size: 3vw;
+  // top: 6vw;
+  // right: -55vw;
+  color: white;
+  text-transform: uppercase;
+  font-family: $titillium;
+  // font-weight: 600;
+  letter-spacing: 0.3vw;
+  z-index: 1000;
+}
+
+.text {
+  font-size: 1.5vw;
+  background-color: white;
+  color: $Teal;
+  // border: 1px solid $Teal;
+}
+
+.border2 {
+  height: 15vw;
+  left: -24vw;
+  top: 71vw;
+  transform: scaleX(-1) rotate(-10deg);
+  overflow-x: hidden;
+}
+
+.btn {
+  padding: 0.5vw;
+  border: 1px solid $gold;
+  border-radius: 0.3vw;
+  margin-top: 1vw;
+}
+
+.skills{
+  height: 60vw;
+}
+
+.icons{
+  display: flex;
+  justify-content: center;
+}
+
+i {
+  position: relative;
+  top: 30vw;
+  font-size: 8vw;
 }
