--- a/styles.css
+++ b/styles.css
@@ -299,16 +299,16 @@ article {
 }
 
 .skills {
-  height: 60vw;
+  height: 80vw;
 }
 
 .icons {
-  display: flex;
-  justify-content: center;
-}
-
-i {
   position: relative;
-  top: 30vw;
-  font-size: 8vw;
+  top: -17vw;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10vw;
+  font-size: 5vw;
+  color: Teal;
+  text-shadow: 1px 1px white;
 }
