--- a/_hamburgers.scss
+++ b/_hamburgers.scss
@@ -5,7 +5,7 @@ $hamburger-padding-y           : 15px !default;
 $hamburger-layer-width         : 30px !default;
 $hamburger-layer-height        : 3px !default;
 $hamburger-layer-spacing       : 6px !default;
-$hamburger-layer-color         : grey !default;
+$hamburger-layer-color         : white !default;
 $hamburger-layer-border-radius : 4px !default;
 $hamburger-hover-opacity       : 0.7 !default;
 $hamburger-active-layer-color  : white !default;
