--- a/styles.scss
+++ b/styles.scss
@@ -11,7 +11,7 @@
 .bg {
   position: absolute;
   top: 0;
-  height: 100%;
+  height: 200%;
   width: 105%;
   z-index: -999;
 }
@@ -89,7 +89,6 @@ nav {
       font-size: 5vw;
     }
   }
-
 }
 
 .aboutMe {
@@ -123,16 +122,19 @@ nav {
     // overflow-x: hidden;
   }
 
-  .border1 {
+  .border {
     position: relative;
-    top: 13vw;
-    left: 44vw;
     border-left: 2px solid Gold;
     border-bottom: 2px solid Gold;
+    z-index: 99;
+  }
+
+  .border1 {
+    top: 13vw;
+    left: 44vw;
     transform: rotate(-30deg);
     height: 18vw;
     width: 60vw;
-    z-index: 99;
   }
 
   .flexbox {
@@ -159,7 +161,8 @@ nav {
     font-size: 3vw;
     color: $Teal;
     text-shadow: 1px 1px grey;
-    transform: rotate(-20deg);
+    transform: rotate(-26deg);
+    margin-left: 1vw;
   }
 
   .headline {
@@ -170,6 +173,7 @@ nav {
     font-family: $titillium;
     letter-spacing: 0.3vw;
     z-index: 1000;
+    margin-bottom: 1vw;
   }
 
   .sub-text {
@@ -209,4 +213,90 @@ nav {
 
 .strip2 {
   transform: rotate(-10deg);
+}
+
+.skills {
+  margin: 0 auto;
+  height: 50vw;
+  width: 80%;
+  // border: 1px solid white;
+
+  .icons {
+  color: $Teal;
+  display: flex;
+  justify-content: space-around;
+
+
+  i {
+    text-shadow: grey;
+    margin: 2vw;
+    font-size: 4vw;
+    z-index: 4;
+    }
+
+  span {
+    color: white;
+    text-align: center;
+    font-family: $titillium;
+    font-size: 6vw;
+    letter-spacing: 0.5vw;
+    opacity: 0.6;
+    position: relative;
+    top: -3vw;
+
+    &:nth-of-type(2) {
+      font-size: 4vw;
+      top: -2vw;
+      }
+
+    &:nth-of-type(3) {
+      font-size: 6vw;
+      top: -3vw;
+      }
+
+    &:nth-of-type(4) {
+      font-size: 4vw;
+      top: -2vw;
+      }
+
+      &:nth-of-type(5) {
+        font-size: 5vw;
+        top: -2vw;
+        }
+    }
+  }
+
+  article.text {
+    font-family: $titillium;
+    background-color: transparent;
+    color: $Teal;
+    align-self: flex-end;
+    text-align:left;
+    margin-left: 30vw;
+    margin-right: 20vw;
+  }
+
+  .border2 {
+    position: relative;
+    border-right: 2px solid Gold;
+    border-top: 2px solid Gold;
+    top: -30vw;
+    left: -50vw;
+    transform: rotate(40deg);
+    height: 60vw;
+    width: 60vw;
+    z-index: 999;
+  }
+
+  .title-skills {
+    position: relative;
+    top: 13vw;
+    right: -3vw;
+    width: 30vw;
+    font-family: $shadows;
+    font-size: 5vw;
+    color: $Teal;
+    text-shadow: 1px 1px grey;
+    transform: rotate(35deg);
+  }
 }
