--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,8 @@
 @import 'colors';
 @import 'fonts';
 @import 'hamburgers';
-// @import 'aos';
+@import '/node_modules/aos/dist/aos.css';
+
 
 * {
   margin: 0;
@@ -30,6 +31,9 @@ nav {
   justify-content: space-around;
 
   .logo {
+    position: relative;
+    top: -4vw;
+    left: 4vw;
     color: $gold;
     font-family: $shadows;
     font-size: 4vw;
@@ -37,7 +41,8 @@ nav {
     text-shadow: 0.2vw 0.2vw grey;
     text-transform: uppercase;
     flex-grow: 3;
-    margin: 4vw 5vw;
+    // margin: 1vw 1vw;
+    transform: rotate(-10deg);
   }
 
   .hamburger {
@@ -52,6 +57,8 @@ nav {
   }
 
   .nav-list {
+    position: relative;
+    z-index: 1000;
     background-color: white;
     color: $Teal;
     font-family: $titillium;
@@ -60,39 +67,47 @@ nav {
     line-height: 1.3;
     list-style-type: none;
     margin-top: 2vw;
-
     padding: 1vw 1vw;
     transform: rotate(-10deg);
 
-    span:nth-of-type(1) {
+    .l1,
+    .l2,
+    .l3 {
+      &:hover {
+        cursor: pointer;
+        color: $gold;
+      }
+    }
+
+    span {
+      width: 0vw;
+    }
+
+    .visible {
       height: 2px;
       width: 11vw;
       background-color: $gold;
       position: absolute;
       left: -2vw;
-
-      &:hover {
-        width: 11vw;
-        transition: width 0.8s ease-in;
-        }
+      transition: width 0.8s ease-in;
     }
   }
 }
 
-.intro {
-  font-family: $titillium;
-  text-transform: uppercase;
-  line-height: 1.2;
-  font-size: 2vw;
-  position: relative;
-  top: 0;
-  left: 0;
 
-  color: white;
-  height: 40vw;
-  letter-spacing: 0.8vw;
+  div.name {
+    font-family: $titillium;
+    text-transform: uppercase;
+    line-height: 1.2;
+    font-size: 2vw;
+    position: relative;
+    top: 0;
+    left: 0;
 
-  .name {
+    color: white;
+    height: 40vw;
+    letter-spacing: 0.8vw;
+
     position: relative;
     top: 21vw;
     left: 24vw;
@@ -102,7 +117,6 @@ nav {
       font-size: 5vw;
     }
   }
-}
 
 .aboutMe {
 
@@ -272,9 +286,9 @@ nav {
       top: -2vw;
       }
 
-      &:nth-of-type(5) {
-        font-size: 5vw;
-        top: -2vw;
+    &:nth-of-type(5) {
+      font-size: 5vw;
+      top: -2vw;
         }
     }
   }
