--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,8 +19,8 @@ a {
 .bg {
   position: absolute;
   top: 0;
-  height: 200%;
-  width: 105%;
+  height: 100vw;
+  width: 100vw;
   z-index: -999;
 }
 
@@ -75,25 +75,24 @@ nav {
     padding: 1vw 1vw;
     transform: rotate(-10deg);
 
-    span {
-      width: 0vw;
-    }
+  span {
+    height: 0.1vw;
+    width: 0vw;
+    background-color: $gold;
+    position: absolute;
+    left: -2vw;
+    transition: width 0.4s ease-in;
+  }
 
-    .l1,
-    .l2,
-    .l3 {
+    a {
       &:hover {
         cursor: pointer;
         color: $gold;
+      //
+      // ~ span {
+      //     width: 11vw
+      //   }
 
-        span {
-          height: 2px;
-          width: 11vw;
-          background-color: $gold;
-          position: absolute;
-          left: -2vw;
-          transition: width 0.8s ease-in;
-        }
       }
     }
   }
@@ -104,10 +103,6 @@ nav {
     text-transform: uppercase;
     line-height: 1.2;
     font-size: 2vw;
-    position: relative;
-    top: 0;
-    left: 0;
-
     color: white;
     height: 40vw;
     letter-spacing: 0.8vw;
@@ -171,7 +166,7 @@ nav {
 
   .flexbox {
     display: flex;
-    margin: 10vw 15vw;
+    margin: 5vw 15vw;
   }
 
 
@@ -229,17 +224,11 @@ nav {
 }
 
 .strip1 {
-  position: relative;
-  top: -50vw;
-  left: 57vw;
   width: 14vw;
   transform: rotate(10deg);
 }
 
 .strip2 {
-  position: relative;
-  top: -48vw;
-  left: 27vw;
   width: 15vw;
   transform: rotate(-2deg);
 }
